--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,29 @@
-.App {
-  text-align: center;
+@import url(https://fonts.googleapis.com/css?family=Dosis:300,400);
+/* NavBar*/
+
+
+/* NavBar*/
+.navbarheading {
+background-color: #20232A;
+color: white;
+text-align: center;
 }
 
+.Brand {
+display:flex;  
+padding-left: 40px;    
+}
+
+.Brand span{
+  font-weight: 800;
+  color: #61dafb;
+  margin-top: 5px;
+  margin-left: 10px;
+  }
+
+
 .App-logo {
-  height: 40vmin;
+  height: 40px;
   pointer-events: none;
 }
 
@@ -13,16 +33,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -35,4 +45,126 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.link{
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+  margin-top: 5px;
+  padding:  0px 1em 0 6em;
+}
+
+.link:hover{
+  color: #61dafb;
+
+}
+
+a:link 
+{ 
+ text-decoration:none; 
+} 
+
+/*ConceptCard*/
+
+.container {
+  width: 1000px;
+  margin: 2% auto;
+}
+
+.item_container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  justify-items: center;
+}
+
+.item {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.disabled {
+  background-color: rgb(104, 104, 104) !important;
+  width: 100%;
+  height: 100px;
+  box-shadow: 2px 2px 2px black;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.disabled.btn3d p {
+  color: rgb(255, 255, 255);
+  margin-top: 10px;}
+
+.btn3d {
+	position: relative;
+	border: 0;
+	transition: all 40ms linear;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 2px;
+	margin-right: 2px;
+}
+
+.btn3d p {color: black;
+margin-top: 10px;}
+
+.btn3d:active,
+.btn3d.active {
+	top: 2px;
+}
+
+.btn3d.btn-default {
+	box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 2px rgba(0, 0, 0, 0.1) inset, 0 8px 0 0 rgba(0, 0, 0, .2), 0 8px 8px 1px rgba(0, 0, 0, .2);
+	background-color: #f9f9f9;
+}
+
+.btn3d.btn-default:active,
+.btn3d.btn-default.active {
+	color: #666666;
+	box-shadow: 0 0 0 1px #ebebeb inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, .1);
+	background-color: #f9f9f9;
+}
+
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+
+  .item_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .item {
+    width: 100%;
+  }
+
+}
+
+
+
+/*Titre*/
+/* effect-shine */
+.Titre {
+  font-family: 'Dosis', sans-serif;
+font-weight: 800;
+}
+
+  
+/*FOOTER*/
+
+footer p {
+  margin: 20px ;
+  text-decoration: none; 
+  text-align: center;
+}
+
+footer a {
+  color: black; 
 }
